NEW : add prediction research report